apps/healthmap-pollutionmap/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollutionmap-backend
  namespace: pollutionmap
  labels:
    app: pollutionmap-backend
    type: backend 
spec:
  revisionHistoryLimit: 2
  selector: 
    matchLabels:
      app: pollutionmap-backend
  template:
    metadata:
      labels:
        app: pollutionmap-backend
        type: backend
    spec:
      imagePullSecrets:
          - name: ghcr-secret
      containers:
        - name: pollutionmap-backend
          image: ghcr.io/curatimexai/nightingale-pollutionmap-backend:3283684f58cc97f7cb6f556764d5f98cf3557245
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
          startupProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
