apps/healthmap-pollutionmap/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollutionmap-frontend
  namespace: pollutionmap
  labels:
    app: pollutionmap-frontend
    type: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  
  selector:
    matchLabels:
      app: pollutionmap-frontend
  template:
    metadata:
      labels:
        app: pollutionmap-frontend
        type: frontend
    spec:
      
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: pollutionmap-frontend
          image: ghcr.io/curatimexai/nightingale-pollutionmap-frontend:3283684f58cc97f7cb6f556764d5f98cf3557245
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
